@@ -1,18 +1,18 @@
 package net.minecraft.world.level.storage.loot.functions;
 
-import com.google.common.collect.ImmutableSet;
-import com.google.gson.JsonDeserializationContext;
-import com.google.gson.JsonObject;
-import com.google.gson.JsonSerializationContext;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.logging.LogUtils;
+import com.mojang.serialization.Codec;
+import com.mojang.serialization.codecs.RecordCodecBuilder;
+import java.util.List;
+import java.util.Optional;
 import java.util.Set;
 import java.util.function.UnaryOperator;
 import javax.annotation.Nullable;
 import net.minecraft.commands.CommandSourceStack;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.ComponentUtils;
-import net.minecraft.util.GsonHelper;
+import net.minecraft.util.ExtraCodecs;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.storage.loot.LootContext;
@@ -22,11 +22,20 @@ import org.slf4j.Logger;
 
 public class SetNameFunction extends LootItemConditionalFunction {
     private static final Logger LOGGER = LogUtils.getLogger();
-    final Component name;
-    @Nullable
-    final LootContext.EntityTarget resolutionContext;
+    public static final Codec<SetNameFunction> CODEC = RecordCodecBuilder.create(
+        param0 -> commonFields(param0)
+                .and(
+                    param0.group(
+                        ExtraCodecs.strictOptionalField(ExtraCodecs.COMPONENT, "name").forGetter(param0x -> param0x.name),
+                        ExtraCodecs.strictOptionalField(LootContext.EntityTarget.CODEC, "entity").forGetter(param0x -> param0x.resolutionContext)
+                    )
+                )
+                .apply(param0, SetNameFunction::new)
+    );
+    private final Optional<Component> name;
+    private final Optional<LootContext.EntityTarget> resolutionContext;
 
-    SetNameFunction(LootItemCondition[] param0, @Nullable Component param1, @Nullable LootContext.EntityTarget param2) {
+    private SetNameFunction(List<LootItemCondition> param0, Optional<Component> param1, Optional<LootContext.EntityTarget> param2) {
         super(param0);
         this.name = param1;
         this.resolutionContext = param2;
@@ -39,7 +48,7 @@ public class SetNameFunction extends LootItemConditionalFunction {
 
     @Override
     public Set<LootContextParam<?>> getReferencedContextParams() {
-        return this.resolutionContext != null ? ImmutableSet.of(this.resolutionContext.getParam()) : ImmutableSet.of();
+        return this.resolutionContext.<Set<LootContextParam<?>>>map(param0 -> Set.of(param0.getParam())).orElse(Set.of());
     }
 
     public static UnaryOperator<Component> createResolver(LootContext param0, @Nullable LootContext.EntityTarget param1) {
@@ -63,38 +72,15 @@ public class SetNameFunction extends LootItemConditionalFunction {
 
     @Override
     public ItemStack run(ItemStack param0, LootContext param1) {
-        if (this.name != null) {
-            param0.setHoverName(createResolver(param1, this.resolutionContext).apply(this.name));
-        }
-
+        this.name.ifPresent(param2 -> param0.setHoverName(createResolver(param1, this.resolutionContext.orElse(null)).apply(param2)));
         return param0;
     }
 
     public static LootItemConditionalFunction.Builder<?> setName(Component param0) {
-        return simpleBuilder(param1 -> new SetNameFunction(param1, param0, null));
+        return simpleBuilder(param1 -> new SetNameFunction(param1, Optional.of(param0), Optional.empty()));
     }
 
     public static LootItemConditionalFunction.Builder<?> setName(Component param0, LootContext.EntityTarget param1) {
-        return simpleBuilder(param2 -> new SetNameFunction(param2, param0, param1));
-    }
-
-    public static class Serializer extends LootItemConditionalFunction.Serializer<SetNameFunction> {
-        public void serialize(JsonObject param0, SetNameFunction param1, JsonSerializationContext param2) {
-            super.serialize(param0, param1, param2);
-            if (param1.name != null) {
-                param0.add("name", Component.Serializer.toJsonTree(param1.name));
-            }
-
-            if (param1.resolutionContext != null) {
-                param0.add("entity", param2.serialize(param1.resolutionContext));
-            }
-
-        }
-
-        public SetNameFunction deserialize(JsonObject param0, JsonDeserializationContext param1, LootItemCondition[] param2) {
-            Component var0 = Component.Serializer.fromJson(param0.get("name"));
-            LootContext.EntityTarget var1 = GsonHelper.getAsObject(param0, "entity", null, param1, LootContext.EntityTarget.class);
-            return new SetNameFunction(param2, var0, var1);
-        }
+        return simpleBuilder(param2 -> new SetNameFunction(param2, Optional.of(param0), Optional.of(param1)));
     }
 }
